# polycopy

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  target_positions.csv  target_trades.csv
src/: target_positions.csv  target_trades.csv
src/polycopy/: API_info.txt  __init__.py  clob_exec.py  config.py  credentials.py  data_api.py  events.py  exec_engine.py  input_api.py  live_shared.py  live_view.py  main.py  market_client.py  orderbook.py  output_api.py  reconcile.py  recorders.py  risk.py  rtds_client.py  state.py
src/polycopy/util/: __init__.py  logging.py  retries.py  time.py
tests/: test_config.py  test_credentials.py  test_intent_store.py  test_live_shared.py  test_normalization.py  test_parsing.py  test_process_event.py  test_recorder.py  test_risk.py
tools/: api_test.py
