[project]
name = "polycopy"
version = "0.1.0"
description = "Polymarket copy trading bot"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.27.0",
  "websockets>=12.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.6.0",
  "tenacity>=8.3.0",
  "orjson>=3.9.0",
  "aiosqlite>=0.19.0",
  "uvloop>=0.20.0; sys_platform != 'win32'",
  "python-dotenv>=1.0.0",
  "click>=8.1.7",
  "py-clob-client>=0.33.0",
  "rich"
]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
